# serializer version: 1
# name: test_read_tags_snapshot[minimal_tags.ogg]
  dict({
    'audio': dict({
      'album_artist_mbid': None,
      'artist_mbid': None,
      'artist_name': 'Minimal Artist',
      'bitrate': 'present',
      'disc_number': None,
      'duration_ms': 'present',
      'normalized_artist_name': 'minimal artist',
      'normalized_title': 'minimal track',
      'raw_metadata_keys': list([
        'artist',
        'encoder',
        'title',
      ]),
      'recording_mbid': None,
      'release_mbid': None,
      'release_status': None,
      'release_title': None,
      'release_type': None,
      'release_type_secondary': None,
      'track_number': None,
      'track_title': 'Minimal Track',
    }),
    'audio_hash': None,
    'enrichment_status': 'pending',
    'file_mtime_ns': 'present',
    'file_name': 'minimal_tags.ogg',
    'file_size': 4084,
    'file_status': 'present',
    'format': 'ogg',
  })
# ---
# name: test_read_tags_snapshot[no_tags.wav]
  dict({
    'audio': dict({
      'album_artist_mbid': None,
      'artist_mbid': None,
      'artist_name': None,
      'bitrate': None,
      'disc_number': None,
      'duration_ms': 'present',
      'normalized_artist_name': None,
      'normalized_title': None,
      'raw_metadata_keys': list([
      ]),
      'recording_mbid': None,
      'release_mbid': None,
      'release_status': None,
      'release_title': None,
      'release_type': None,
      'release_type_secondary': None,
      'track_number': None,
      'track_title': None,
    }),
    'audio_hash': None,
    'enrichment_status': 'pending',
    'file_mtime_ns': 'present',
    'file_name': 'no_tags.wav',
    'file_size': 17684,
    'file_status': 'present',
    'format': 'wav',
  })
# ---
# name: test_read_tags_snapshot[partial_tags.mp3]
  dict({
    'audio': dict({
      'album_artist_mbid': None,
      'artist_mbid': None,
      'artist_name': 'Some Artist',
      'bitrate': 'present',
      'disc_number': None,
      'duration_ms': 'present',
      'normalized_artist_name': 'some artist',
      'normalized_title': 'partial track',
      'raw_metadata_keys': list([
        'TALB',
        'TIT2',
        'TPE1',
        'TRCK',
      ]),
      'recording_mbid': None,
      'release_mbid': None,
      'release_status': None,
      'release_title': 'Some Album',
      'release_type': None,
      'release_type_secondary': None,
      'track_number': 5,
      'track_title': 'Partial Track',
    }),
    'audio_hash': None,
    'enrichment_status': 'pending',
    'file_mtime_ns': 'present',
    'file_name': 'partial_tags.mp3',
    'file_size': 3425,
    'file_status': 'present',
    'format': 'mp3',
  })
# ---
# name: test_read_tags_snapshot[well_tagged.mp3]
  dict({
    'audio': dict({
      'album_artist_mbid': '66666666-7777-8888-9999-aaaaaaaaaaaa',
      'artist_mbid': '11111111-2222-3333-4444-555555555555',
      'artist_name': 'Test Artist',
      'bitrate': 'present',
      'disc_number': 1,
      'duration_ms': 'present',
      'normalized_artist_name': 'test artist',
      'normalized_title': 'test track one',
      'raw_metadata_keys': list([
        'TALB',
        'TIT2',
        'TPE1',
        'TPOS',
        'TRCK',
        'TXXX:MusicBrainz Album Artist Id',
        'TXXX:MusicBrainz Album Id',
        'TXXX:MusicBrainz Artist Id',
        'TXXX:MusicBrainz Release Status',
        'TXXX:MusicBrainz Release Type',
        'TXXX:MusicBrainz Track Id',
      ]),
      'recording_mbid': 'aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee',
      'release_mbid': 'bbbbbbbb-cccc-dddd-eeee-ffffffffffff',
      'release_status': 'official',
      'release_title': 'Test Album',
      'release_type': 'album',
      'release_type_secondary': None,
      'track_number': 3,
      'track_title': 'Test Track One',
    }),
    'audio_hash': None,
    'enrichment_status': 'pending',
    'file_mtime_ns': 'present',
    'file_name': 'well_tagged.mp3',
    'file_size': 5236,
    'file_status': 'present',
    'format': 'mp3',
  })
# ---
# name: test_scan_directory_snapshot
  dict({
    'files': list([
      dict({
        'audio': dict({
          'album_artist_mbid': None,
          'artist_mbid': None,
          'artist_name': 'Minimal Artist',
          'bitrate': 'present',
          'disc_number': None,
          'duration_ms': 'present',
          'normalized_artist_name': 'minimal artist',
          'normalized_title': 'minimal track',
          'raw_metadata_keys': list([
            'artist',
            'encoder',
            'title',
          ]),
          'recording_mbid': None,
          'release_mbid': None,
          'release_status': None,
          'release_title': None,
          'release_type': None,
          'release_type_secondary': None,
          'track_number': None,
          'track_title': 'Minimal Track',
        }),
        'audio_hash': None,
        'enrichment_status': 'pending',
        'file_mtime_ns': 'present',
        'file_name': 'minimal_tags.ogg',
        'file_size': 4084,
        'file_status': 'present',
        'format': 'ogg',
      }),
      dict({
        'audio': dict({
          'album_artist_mbid': None,
          'artist_mbid': None,
          'artist_name': None,
          'bitrate': None,
          'disc_number': None,
          'duration_ms': 'present',
          'normalized_artist_name': None,
          'normalized_title': None,
          'raw_metadata_keys': list([
          ]),
          'recording_mbid': None,
          'release_mbid': None,
          'release_status': None,
          'release_title': None,
          'release_type': None,
          'release_type_secondary': None,
          'track_number': None,
          'track_title': None,
        }),
        'audio_hash': None,
        'enrichment_status': 'pending',
        'file_mtime_ns': 'present',
        'file_name': 'no_tags.wav',
        'file_size': 17684,
        'file_status': 'present',
        'format': 'wav',
      }),
      dict({
        'audio': dict({
          'album_artist_mbid': None,
          'artist_mbid': None,
          'artist_name': 'Some Artist',
          'bitrate': 'present',
          'disc_number': None,
          'duration_ms': 'present',
          'normalized_artist_name': 'some artist',
          'normalized_title': 'partial track',
          'raw_metadata_keys': list([
            'TALB',
            'TIT2',
            'TPE1',
            'TRCK',
          ]),
          'recording_mbid': None,
          'release_mbid': None,
          'release_status': None,
          'release_title': 'Some Album',
          'release_type': None,
          'release_type_secondary': None,
          'track_number': 5,
          'track_title': 'Partial Track',
        }),
        'audio_hash': None,
        'enrichment_status': 'pending',
        'file_mtime_ns': 'present',
        'file_name': 'partial_tags.mp3',
        'file_size': 3425,
        'file_status': 'present',
        'format': 'mp3',
      }),
      dict({
        'audio': dict({
          'album_artist_mbid': '66666666-7777-8888-9999-aaaaaaaaaaaa',
          'artist_mbid': '11111111-2222-3333-4444-555555555555',
          'artist_name': 'Test Artist',
          'bitrate': 'present',
          'disc_number': 1,
          'duration_ms': 'present',
          'normalized_artist_name': 'test artist',
          'normalized_title': 'test track one',
          'raw_metadata_keys': list([
            'TALB',
            'TIT2',
            'TPE1',
            'TPOS',
            'TRCK',
            'TXXX:MusicBrainz Album Artist Id',
            'TXXX:MusicBrainz Album Id',
            'TXXX:MusicBrainz Artist Id',
            'TXXX:MusicBrainz Release Status',
            'TXXX:MusicBrainz Release Type',
            'TXXX:MusicBrainz Track Id',
          ]),
          'recording_mbid': 'aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee',
          'release_mbid': 'bbbbbbbb-cccc-dddd-eeee-ffffffffffff',
          'release_status': 'official',
          'release_title': 'Test Album',
          'release_type': 'album',
          'release_type_secondary': None,
          'track_number': 3,
          'track_title': 'Test Track One',
        }),
        'audio_hash': None,
        'enrichment_status': 'pending',
        'file_mtime_ns': 'present',
        'file_name': 'well_tagged.mp3',
        'file_size': 5236,
        'file_status': 'present',
        'format': 'mp3',
      }),
    ]),
    'quarantine': list([
      dict({
        'error_message': "can't sync to MPEG frame",
        'file_name': 'corrupt.mp3',
      }),
    ]),
  })
# ---
# name: test_scan_folder_incrementally_snapshot
  dict({
    'quarantine_paths': list([
      'corrupt.mp3',
    ]),
    'result': dict({
      'files_missing': 1,
      'files_reappeared': 0,
      'files_relocated': 0,
      'files_skipped': 1,
      'files_written': 2,
      'folder_unreadable': False,
      'quarantine_cleared': 0,
      'quarantined': 1,
    }),
    'rows': dict({
      'changed.ogg': dict({
        'audio': dict({
          'album_artist_mbid': None,
          'artist_mbid': None,
          'artist_name': 'Minimal Artist',
          'bitrate': 'present',
          'disc_number': None,
          'duration_ms': 'present',
          'normalized_artist_name': 'minimal artist',
          'normalized_title': 'minimal track',
          'raw_metadata_keys': list([
            'artist',
            'encoder',
            'title',
          ]),
          'recording_mbid': None,
          'release_mbid': None,
          'release_status': None,
          'release_title': None,
          'release_type': None,
          'release_type_secondary': None,
          'track_number': None,
          'track_title': 'Minimal Track',
        }),
        'audio_hash': None,
        'enrichment_status': 'pending',
        'file_mtime_ns': 'present',
        'file_name': 'changed.ogg',
        'file_size': 4084,
        'file_status': 'present',
        'format': 'ogg',
      }),
      'ghost.flac': dict({
        'audio': dict({
          'album_artist_mbid': None,
          'artist_mbid': None,
          'artist_name': None,
          'bitrate': None,
          'disc_number': None,
          'duration_ms': None,
          'normalized_artist_name': None,
          'normalized_title': None,
          'raw_metadata_keys': list([
          ]),
          'recording_mbid': None,
          'release_mbid': None,
          'release_status': None,
          'release_title': None,
          'release_type': None,
          'release_type_secondary': None,
          'track_number': None,
          'track_title': None,
        }),
        'audio_hash': None,
        'enrichment_status': 'pending',
        'file_mtime_ns': 'present',
        'file_name': 'ghost.flac',
        'file_size': 1,
        'file_status': 'missing',
        'format': 'flac',
      }),
      'new.wav': dict({
        'audio': dict({
          'album_artist_mbid': None,
          'artist_mbid': None,
          'artist_name': None,
          'bitrate': None,
          'disc_number': None,
          'duration_ms': 'present',
          'normalized_artist_name': None,
          'normalized_title': None,
          'raw_metadata_keys': list([
          ]),
          'recording_mbid': None,
          'release_mbid': None,
          'release_status': None,
          'release_title': None,
          'release_type': None,
          'release_type_secondary': None,
          'track_number': None,
          'track_title': None,
        }),
        'audio_hash': None,
        'enrichment_status': 'pending',
        'file_mtime_ns': 'present',
        'file_name': 'new.wav',
        'file_size': 17684,
        'file_status': 'present',
        'format': 'wav',
      }),
      'unchanged.mp3': dict({
        'audio': dict({
          'album_artist_mbid': None,
          'artist_mbid': None,
          'artist_name': None,
          'bitrate': None,
          'disc_number': None,
          'duration_ms': None,
          'normalized_artist_name': None,
          'normalized_title': None,
          'raw_metadata_keys': list([
          ]),
          'recording_mbid': None,
          'release_mbid': None,
          'release_status': None,
          'release_title': None,
          'release_type': None,
          'release_type_secondary': None,
          'track_number': None,
          'track_title': None,
        }),
        'audio_hash': None,
        'enrichment_status': 'pending',
        'file_mtime_ns': 'present',
        'file_name': 'unchanged.mp3',
        'file_size': 5236,
        'file_status': 'present',
        'format': 'mp3',
      }),
    }),
  })
# ---
